--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
           <a class="navbar-brand" href="index.html">
-              <span class="fa fa-laptop"></span> Alexander
+              <span class="fa fa-laptop"></span> Doris
           </a>
           <!-- if logo is image enable this   
       <a class="navbar-brand" href="#index.html">
@@ -104,7 +104,7 @@
                         </div>
                         <div class="cont-right">
                             <h6>Email Me</h6>
-                            <p><a href="mailto:example@mail.com" class="mail">example@mail.com</a></p>
+                            <p><a href="mailto:1210578407@qq.com" class="mail">1210578407@qq.com</a></p>
                         </div>
                     </div>
                     <div class="cont-top margin-up">
@@ -113,7 +113,7 @@
                         </div>
                         <div class="cont-right">
                             <h6>Location</h6>
-                            <p>Address here, 208 Trainer Avenue street, Illinois, UK - 62617.</p>
+                            <p>Address here, Chengdu, Sichuan Province</p>
                         </div>
                     </div>
                 </div>
@@ -141,11 +141,11 @@
     </div>
 </section>
 <!-- /contact1 -->
-<div class="map-iframe">
+<!-- <div class="map-iframe">
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"
         width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
-</div>
+</div> -->
 <!-- //contact block -->
 <!-- Footer -->
 <section class="w3l-footer py-sm-5 py-4">
@@ -153,7 +153,7 @@
     <div class="footer-content">
       <div class="row">
         <div class="col-lg-8 footer-left">
-          <p class="m-0">Copyright &copy; 2021.Company name All rights reserved.</p>
+          <p class="m-0">Copyright &copy; 2023.Doris All rights reserved.</p>
         </div>
         <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
           <ul class="social m-0 p-0">
