--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-sm-12 mt-lg-0 mt-4">
           <span class="title-small">Hello</span>
-          <h1 class="mb-2 title"> <span>I'm</span> Alexander </h1>
+          <h1 class="mb-2 title"> <span>I'm</span> Doris </h1>
           <p>Personal slogan: Be yourself，Be a better version of yourself</p>
           <div class="mt-sm-5 mt-4">
             <a class="btn btn-primary btn-style mr-2" href="contact.html"> Hire Me </a>
@@ -82,7 +82,7 @@
         </div>
         <div class="col-lg-6 col-md-8 col-sm-10 mt-lg-0 mt-4">
           <div class="img-effect text-lg-center">
-            <img src="assets/images/myphoto.jpg" alt="myphoto" class="img-fluid">
+            <img src="assets/images/myphoto1.jpg" alt="myphoto" class="img-fluid">
           </div>
         </div>
       </div>
