--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     </div>
                     <div class="peopl align-self">
                       <h3>ella </h3>
-                      <p class="indentity">Seattle, Washington</p>
+                      <p class="indentity">Macau</p>
                     </div>
                   </div>
                 </div>
@@ -289,7 +289,7 @@
                     </div>
                     <div class="peopl align-self">
                       <h3>zora </h3>
-                      <p class="indentity">Seattle, Washington</p>
+                      <p class="indentity">Macau</p>
                     </div>
                   </div>
                 </div>
@@ -307,7 +307,7 @@
                     </div>
                     <div class="peopl align-self">
                       <h3>fay </h3>
-                      <p class="indentity">Seattle, Washington</p>
+                      <p class="indentity">Macau</p>
                     </div>
                   </div>
                 </div>
@@ -325,7 +325,7 @@
                     </div>
                     <div class="peopl align-self">
                       <h3>cervine </h3>
-                      <p class="indentity">Seattle, Washington</p>
+                      <p class="indentity">Macau</p>
                     </div>
                   </div>
                 </div>
@@ -343,7 +343,7 @@
                     </div>
                     <div class="peopl align-self">
                       <h3>dear </h3>
-                      <p class="indentity">Seattle, Washington</p>
+                      <p class="indentity">Macau</p>
                     </div>
                   </div>
                 </div>
@@ -361,7 +361,7 @@
                     </div>
                     <div class="peopl align-self">
                       <h3>hedy </h3>
-                      <p class="indentity">Seattle, Washington</p>
+                      <p class="indentity">Macau</p>
                     </div>
                   </div>
                 </div>
